Se incorpora eslint y proptypes. Código optimizado.

--- a/client/package.json
+++ b/client/package.json
@@ -41,5 +41,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0"
+  }
 }
