--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,12 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.0.0",
+    "@types/react": "^17.0.13",
+    "@types/react-dom": "^17.0.8",
     "eslint": "^7.30.0",
-    "eslint-plugin-react": "^7.24.0"
+    "eslint-plugin-react": "^7.24.0",
+    "typescript": "^4.3.5"
   }
 }
